# package-myapp

./: LICENCE  README.md  boot_django.py  makemigrations.py  pyproject.toml  run_tests.py  setup.cfg
.github/workflows/: python-package.yml
manage/: _boot_django.py  makemigrations.py  test.py
myapp/migrations/: 0001_initial.py
src/myapp/: models.py  utils.py  views.py
src/myapp/migrations/: 0001_initial.py  0002_alter_place_name.py
src/myapp/tests/: test_utils.py
