# setup.cfg
[metadata]
name = myapp
version = 0.1
description = My sandbox to create a PyPi package
long_description = file:README.md
long_description_content_type='text/markdown',
url = https://github.com/Gostich/package-myapp
license = MIT
classifiers =
    Development Status :: Sandbox
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 57.0.0
install_requires =
    Django>=3.0
